# cannabis_review_data

./: .gitignore  README.md  leafly_data.h5  pyproject.toml  scrape_leafly_reviews.py
